--- a/index.html
+++ b/index.html
@@ -1,14 +1,18 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-<meta charset="utf-8">
-<title>Acc_Robin's Archive</title>
+	<meta charset="utf-8">
+	<title>Acc_Robin's Archive</title>
 </head>
+
 <body>
-
-<h1>Acc_Robin's Archive</h1>
-
-<p></p>
-
+	<h1><a href = "https://accrobin.github.io"><p style="text-align: center;">Acc Robin's Archive</p></a></h1>
+	<p style="font-size: 20px;text-align: center;">This is a private page hosted by Acc Robin Abraham, which is used for storing the code, notes, ect.</p>
 </body>
+
+<body>
+	
+</body>
+
 </html>
