--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 	<p style="font-size: 20px;text-align: center;">This is a private page hosted by Acc Robin Abraham, which is used for storing the code, notes, etc.</p>
 
 	<p><a href = "templates/index_templates.html">Templates for OI/XCPC</a></p>
+	<p><a href = "solu/index_solu.html">Solutions for OI/XCPC</a></p>
 </body>
 
 </html>
