--- a/solu/index_solu.html
+++ b/solu/index_solu.html
@@ -9,6 +9,11 @@
 	<h1><p style="text-align: center;">Solutions for OI/XCPC</p></h1>
 	<a href="../index.html"><button>Back</button></a>
 	
+	<h4>Solutions for Single Problems</h4>
 	<p><a href="CF1858D.html">CF1858D Trees and Segments</a></p>
+
+	<h4>Recordings of Contests</h4>
+	<p><a href=2023CCPC_Qinhuangdao.html>2023 CCPC Qinhuangdao</a>
+	
 </body>
 </html>
