--- a/solu/2023CCPC_Qinhuangdao.html
+++ b/solu/2023CCPC_Qinhuangdao.html
@@ -16,14 +16,14 @@
         }
     </style>
     <link href="../additional_files/pgmain.min.css" rel="stylesheet" type="text/css">
-    <title>CF1858D Trees and Segments</title>
+    <title>2023 CCPC Qinhuangdao</title>
 </head>
 
 <body>
     <h1><p style="text-align: center;">2023 CCPC Qinhuangdao</p></h1>
     <a href="index_solu.html"><button>Back</button></a>
 
-    <h2>整体评价</h2>
+    <h3>整体评价</h3>
     
     VP $5$ 题罚时 $656$，铜尾。
 
