--- a/solu/2023CCPC_Qinhuangdao.html
+++ b/solu/2023CCPC_Qinhuangdao.html
@@ -84,7 +84,7 @@
 
         将每个数 $x$ 转化为一个二元组 $\left(\left\lfloor \dfrac xk\right\rfloor, x\bmod k \right)$，那么修改操作就是在进行最靠右的列的分割与合并，可以用线段树分裂合并维护。<br>
 
-        考虑更简单的做法，用一个值域线段树维护最右的列，用指针 $p$ 指向当前最右的列中分裂到哪个位置了，每次修改会将指针向下移动，扫过的元素理应分裂出这颗线段树，不能保证复杂度。但是我们把下一列的元素插进这颗线段树，不过每次二分第 $k$ 大要从 $p$ 开始。这样，当 $p$ 行进到底端时线段树上留有的元素就是下一列的元素，只需再把 $p$ 重置即可。
+        考虑更简单的做法，用一个值域线段树维护最右的列，用指针 $p$ 指向当前最右的列中分裂到哪个位置了，每次修改会将指针向下移动，扫过的元素理应从这颗线段树中删除，不能保证复杂度。考虑把下一列的元素插进这颗线段树，不过每次二分第 $k$ 大要从 $p$ 开始。这样，当 $p$ 行进到底端时线段树上留有的元素就是下一列的元素，只需再把 $p$ 重置即可。
     </p>
 
     <h3>J Keyi LIkes Reading</h3>
