--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 
 	<p><a href = "templates/index_templates.html">Templates for OI/XCPC</a></p>
 	<p><a href = "solu/index_solu.html">Solutions for OI/XCPC</a></p>
+	<p><a href = "ACM/2023/index.html">2023-2024 冬 ACM 例会</a></p>
 </body>
 
 </html>
