--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 	<p><a href = "templates/index_templates.html">Templates for OI/XCPC</a></p>
 	<p><a href = "solu/index_solu.html">Solutions for OI/XCPC</a></p>
 	<p><a href = "ACM/2023/index.html">BNU XCPC 2024 寒假训练</a></p>
+	<p><a href = "ACM/2023/suanfa/suan_fa_jiang_tang_2.html">BNU 2024 算法讲堂</a></p>
 </body>
 
 </html>
